version 1.3.0

	* New reference manager mod_corba was added, mod_eppd was adapted
	to changed reference management policy. Now each connection has
	its own unique CORBA reference.

	* As a side effect of changes in reference management code, the
	apache can be started without omninames running. The object references
	are obtained and resolved upon request arrival.

	* Handling of period in renew and create was changed. The period
	is now structured as 'value' and 'unit'. No conversion to months
	is done on behalf of mod_eppd.

	* Support for update of status flags was removed.

version 1.2.0

	* New memory allocator. Memory is now allocated from pools and freed
	all at once when request processing is over.

	* Structure for lists 'circ_list' was replaced by 'qhead' and 'qitem'.

	* The mega-structure containing all possible request was parted
	in smaller peaces, which ease manipulation.

	* The epp-client.c file (CORBA component) was made bullet-proof
	against possible memory allocation failures.

	* Exceptions in CORBA functions are used instead of the hack
	(svTRID == 0).

	* All errors are translated on CR side from now (even libxml errors).

	* Extension handling mechanism was changed in order to make adding
	of new extensions easier (DNSSEC extension was dropped for now).

	* Changes in schema files (see ChangeLog in subdirectory schemas).

	* ... major rebuild of all source files and code cleanup

version 1.1.1

	* AuthInfo parameter when creating an object is not mandatory parameter
	anymore but optional.

	* Missing attribute 'lang' in reason element in check response was
	added.

	* Schema changes (see ChangeLog in schema subdirectory).

version 1.1.0

	* First version targeted for production release (does not have a tag
	in repository).