@@ -1062,7 +1062,7 @@ static int epp_postconfig_hook(apr_pool_t *p, apr_pool_t *plog,
 		}
 		s = s->next;
 	}
-	ap_log_error(APLOG_MARK, APLOG_NOTICE, 0, s,
+	ap_log_error(APLOG_MARK, APLOG_INFO, 0, s,
 		"mod_eppd started (mod_eppd version %s, SVN revision %s, BUILT %s %s)",
 				PACKAGE_VERSION, SVN_REV, __DATE__, __TIME__);
 
