@@ -14,6 +14,10 @@ version 1.3.0
 
 	* Support for update of status flags was removed.
 
+	* New EPP command 'sendAuthInfo' was implemented.
+
+	* Script for regular update of CRL.
+
 version 1.2.0
 
 	* New memory allocator. Memory is now allocated from pools and freed
